# src/application/driver/create-driver/create-driver.dto.ts
@@ -1,9 +1,9 @@
 export class CreateDriverDto {
-  public readonly first_name!: string;
-  public readonly last_name!: string;
+  public readonly firstName!: string;
+  public readonly lastName!: string;
   public readonly email!: string;
-  public readonly phone?: string;
-  public readonly avatar_url?: string;
+  public readonly phone!: string;
+  public readonly avatarUrl?: string;
   public readonly companyId!: number;
 
   constructor(dto: CreateDriverDto) {
